--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 <body>
     <div class="flex w-full h-full justify-center items-center relative">
         <div
-            class="absolute z-10 p-8 rounded-lg w-full md:w-1/3 border border-gray-500 md:left-0 md:ml-3 bg-white shadow-2xl details">
+            class="absolute z-10 p-8 rounded-lg w-full md:w-1/3 border md:left-0 md:ml-3 bg-white shadow-2xl details">
             <div>
                 <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads">
                 <div class="text-center font-bold text-xl pt-8">Surface Mount Beads</div>
             </div>
         </div>
+        <div class="absolute border-b border-blue-600 w-24" style="margin-left: -10%; margin-top: -2%;"></div>
         <div class="w-1/2">
             <div
                 class="rounded-full h-4 w-4 flex items-center justify-center bg-blue-600 absolute surface_mount_beads-pointer">
