--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light-border.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale-extreme.css" />
 </head>
 
 <body>
-    <div class="flex w-full h-full justify-center items-center relative">
-        <div
-            class="absolute z-10 p-8 rounded-lg w-full md:w-1/3 border md:left-0 md:ml-3 bg-white shadow-2xl details">
-            <div>
-                <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads">
-                <div class="text-center font-bold text-xl pt-8">Surface Mount Beads</div>
-            </div>
+    <div style="display: none;">
+        <div id="surface_mount_beads">
+            <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads">
+            <div class="font-bold text-center">Surface Mount Beads</div>
         </div>
-        <div class="absolute border-b border-blue-600 w-24" style="margin-left: -10%; margin-top: -2%;"></div>
+        <div id="two">
+            <strong>Content for `two`</strong>
+        </div>
+        <div id="three">
+            <strong>Content for `three`</strong>
+        </div>
+    </div>
+    <div class="flex w-full h-full justify-center items-center relative">
         <div class="w-1/2">
+            <div class="absolute border-b-2 border-black surface_mount_beads-line"
+                style="margin-left: 7%; margin-top: 17.5%;"></div>
             <div
                 class="rounded-full h-4 w-4 flex items-center justify-center bg-blue-600 absolute surface_mount_beads-pointer">
             </div>
             <div
+                data-template="surface_mount_beads"
                 class="rounded-full h-4 w-4 flex items-center justify-center bg-blue-600 absolute puff-out-center cursor-pointer surface_mount_beads-pointer">
             </div>
             <img src="images/car.jpg" alt="Car" class="mb-24">
         </div>
     </div>
     <style>
-        .details {
-            transform: translateX(-100vw);
-        }
-
         .surface_mount_beads-pointer {
             margin-top: 17%;
             margin-left: 17%;
@@ -57,48 +60,20 @@
                 opacity: 0
             }
         }
-
-        .slide-in {
-            animation: slide-in .5s cubic-bezier(.25, .46, .45, .94) both
-        }
-
-        @keyframes slide-in {
-            0% {
-                transform: translateX(-1000px);
-                opacity: 0
-            }
-
-            100% {
-                transform: translateX(0);
-                opacity: 1
-            }
-        }
-
-        .slide-out {
-            animation: slide-out .5s cubic-bezier(.55, .085, .68, .53) both
-        }
-
-        @keyframes slide-out {
-            0% {
-                transform: translateX(0);
-                opacity: 1
-            }
-
-            100% {
-                transform: translateX(-1000px);
-                opacity: 0
-            }
-        }
     </style>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
     <script>
-        $('.surface_mount_beads-pointer').mouseenter(function () {
-            $('.details').removeClass('slide-out')
-            $('.details').addClass('slide-in')
-        })
-        $('.surface_mount_beads-pointer').mouseleave(function () {
-            $('.details').removeClass('slide-in')
-            $('.details').addClass('slide-out')
-        })
+        tippy('[data-template]', {
+            content(reference) {
+                const id = reference.getAttribute('data-template');
+                const template = document.getElementById(id);
+                return template.innerHTML;
+            },
+            allowHTML: true,
+            theme: 'light-border',
+            animation: 'scale-extreme'
+        });
     </script>
 </body>
 
