Trigger on click

--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
             },
             allowHTML: true,
             theme: 'light-border',
-            animation: 'scale-extreme'
+            animation: 'scale-extreme',
+            trigger: 'click'
         });
     </script>
 </body>
