--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!-- End content for Large Planar Cores -->
     </div>
     <div class="flex w-full h-full justify-center items-center relative">
-        <div class="w-1/2">
+        <div>
             <!-- Surface Mount Pointer -->
             <div class="blue-circle surface_mount_beads-pointer"></div>
             <div data-template="surface_mount_beads" class="blue-circle puff-out-center surface_mount_beads-pointer">
@@ -85,28 +85,28 @@
         }
 
         .surface_mount_beads-pointer {
-            margin-top: 17%;
-            margin-left: 17%;
+            margin-top: calc(17% * 2);
+            margin-left: calc(17% * 2);
         }
 
         .split_supression_cores-pointer {
-            margin-top: 20%;
-            margin-left: 43.3%;
+            margin-top: calc(20% * 2);
+            margin-left: calc(43.3% * 2);
         }
 
         .wound_rods-pointer {
-            margin-top: 17.5%;
-            margin-left: 7.5%;
+            margin-top: calc(17.5% * 2);
+            margin-left: calc(7.5% * 2);
         }
 
         .connector_plates-pointer {
-            margin-top: 19.5%;
-            margin-left: 22.5%;
+            margin-top: calc(19.5% * 2);
+            margin-left: calc(22.5% * 2);
         }
 
         .large_planar_cores-pointer {
-            margin-top: 29.3%;
-            margin-left: 37%;
+            margin-top: calc(29.3% * 2);
+            margin-left: calc(37% * 2);
         }
 
         .puff-out-center {
