--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             },
             allowHTML: true,
             theme: 'light-border',
-            animation: 'scale-extreme',
+            //animation: 'scale-extreme',
             trigger: 'click'
         });
     </script>
