--- a/index.html
+++ b/index.html
@@ -13,31 +13,56 @@
         <!-- Start content for Surface Mount Beads -->
         <div id="surface_mount_beads" class="w-40">
             <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads" class="object-contain">
-            <div class="font-bold text-center">Surface Mount Beads</div>
+            <div class="bg-gray-200 flex items-center justify-between p-3">
+                <div class="font-bold text-center">Surface Mount Beads</div>
+                <div>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                </div>
+            </div>
         </div>
         <!-- End content for Surface Mount Beads -->
         <!-- Start content for Split Supression Cores -->
         <div id="split_supression_cores" class="w-40">
             <img src="images/split_supression_cores.jpg" alt="Split Supression Cores" class="object-contain">
-            <div class="font-bold text-center">Split Supression Cores</div>
+            <div class="bg-gray-200 flex items-center justify-between p-3">
+                <div class="font-bold text-center">Split Supression Cores</div>
+                <div>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                </div>
+            </div>
         </div>
         <!-- End content for Split Supression Cores -->
         <!-- Start content for Wound Rods -->
         <div id="wound_rods" class="w-40">
-            <img src="images/wound_rods.png" alt="Wound Rods" class="object-contain">
-            <div class="font-bold text-center">Wound Rods</div>
+            <img src="images/wound_rods.jpg" alt="Wound Rods" class="object-contain">
+            <div class="bg-gray-200 flex items-center justify-between p-3">
+                <div class="font-bold text-center">Wound Rods</div>
+                <div>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                </div>
+            </div>
         </div>
         <!-- End content for Wound Rods -->
         <!-- Start content for Connector Plates -->
         <div id="connector_plates" class="w-40">
-            <img src="images/connector_plates.png" alt="Connector Plates" class="object-contain">
-            <div class="font-bold text-center">Connector Plates</div>
+            <img src="images/connector_plates.jpg" alt="Connector Plates" class="object-contain">
+            <div class="bg-gray-200 flex items-center justify-between p-3">
+                <div class="font-bold text-center">Connector Plates</div>
+                <div>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                </div>
+            </div>
         </div>
         <!-- End content for Connector Plates Cores -->
         <!-- Start content for Large Planar Cores -->
         <div id="large_planar_cores" class="w-40">
-            <img src="images/large_planar_cores.png" alt="Large Planar Cores" class="object-contain">
-            <div class="font-bold text-center">Large Planar Cores</div>
+            <img src="images/large_planar_cores.jpg" alt="Large Planar Cores" class="object-contain">
+            <div class="bg-gray-200 flex items-center justify-between p-3">
+                <div class="font-bold text-center">Large Planar Cores</div>
+                <div>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                </div>
+            </div>
         </div>
         <!-- End content for Large Planar Cores -->
     </div>
@@ -112,6 +137,10 @@
             animation: puff-out-center 1s cubic-bezier(.165, .84, .44, 1.000) infinite both
         }
 
+        .tippy-content {
+            padding: 0 !important;
+        }
+
         @keyframes puff-out-center {
             0% {
                 transform: scale(1);
@@ -128,7 +157,7 @@
 
         @media all and (max-width: 768px) {
             [data-tippy-root] {
-                transform: translateY(100%) translateX(5px) !important;
+                transform: translateY(110%) translateX(5px) !important;
             }
             .tippy-box {
                 width: calc(100vw -10px) !important;
