--- a/index.html
+++ b/index.html
@@ -12,55 +12,55 @@
     <div class="hidden">
         <!-- Start content for Surface Mount Beads -->
         <div id="surface_mount_beads" class="w-40">
-            <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads" class="object-contain">
-            <div class="bg-gray-200 flex items-center justify-between p-3">
+            <img src="images/surface_mount_beads.jpg" alt="Surface Mount Beads" class="object-contain py-4">
+            <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Surface Mount Beads</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
         <!-- End content for Surface Mount Beads -->
         <!-- Start content for Split Supression Cores -->
         <div id="split_supression_cores" class="w-40">
-            <img src="images/split_supression_cores.jpg" alt="Split Supression Cores" class="object-contain">
-            <div class="bg-gray-200 flex items-center justify-between p-3">
+            <img src="images/split_supression_cores.jpg" alt="Split Supression Cores" class="object-contain py-4">
+            <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Split Supression Cores</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
         <!-- End content for Split Supression Cores -->
         <!-- Start content for Wound Rods -->
         <div id="wound_rods" class="w-40">
-            <img src="images/wound_rods.jpg" alt="Wound Rods" class="object-contain">
-            <div class="bg-gray-200 flex items-center justify-between p-3">
+            <img src="images/wound_rods.jpg" alt="Wound Rods" class="object-contain py-4">
+            <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Wound Rods</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
         <!-- End content for Wound Rods -->
         <!-- Start content for Connector Plates -->
         <div id="connector_plates" class="w-40">
-            <img src="images/connector_plates.jpg" alt="Connector Plates" class="object-contain">
-            <div class="bg-gray-200 flex items-center justify-between p-3">
+            <img src="images/connector_plates.jpg" alt="Connector Plates" class="object-contain py-4">
+            <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Connector Plates</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
         <!-- End content for Connector Plates Cores -->
         <!-- Start content for Large Planar Cores -->
         <div id="large_planar_cores" class="w-40">
-            <img src="images/large_planar_cores.jpg" alt="Large Planar Cores" class="object-contain">
-            <div class="bg-gray-200 flex items-center justify-between p-3">
+            <img src="images/large_planar_cores.jpg" alt="Large Planar Cores" class="object-contain py-4">
+            <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Large Planar Cores</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-1">More</a>
+                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -129,7 +129,7 @@
         }
 
         .large_planar_cores-pointer {
-            margin-top: calc(29.3% * 2);
+            margin-top: calc(29.2% * 2);
             margin-left: calc(37% * 2);
         }
 
@@ -155,9 +155,9 @@
             }
         }
 
-        @media all and (max-width: 768px) {
+        @media all and (max-width: 767px) {
             [data-tippy-root] {
-                transform: translateY(110%) translateX(5px) !important;
+                transform: translateY(100%) translateX(5px) !important;
             }
             .tippy-box {
                 width: calc(100vw -10px) !important;
