--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Surface Mount Beads</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -27,7 +27,7 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Split Supression Cores</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -38,7 +38,7 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Wound Rods</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Connector Plates</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -60,7 +60,7 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Large Planar Cores</div>
                 <div>
-                    <a href="#" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -157,11 +157,11 @@
 
         @media all and (max-width: 767px) {
             [data-tippy-root] {
-                transform: translateY(100%) translateX(5px) !important;
+                transform: translateY(100%) translateX(12.5px) !important;
             }
             .tippy-box {
-                width: calc(100vw -10px) !important;
-                max-width: 100vw !important;
+                width: calc(100vw -20px) !important;
+                max-width: calc(100vw -20px) !important;
             }
         }
     </style>
