--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Surface Mount Beads</div>
                 <div>
-                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/"
+                        class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -27,7 +28,8 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Split Supression Cores</div>
                 <div>
-                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/"
+                        class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -38,7 +40,8 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Wound Rods</div>
                 <div>
-                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/"
+                        class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -49,7 +52,8 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Connector Plates</div>
                 <div>
-                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/"
+                        class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -60,7 +64,8 @@
             <div class="bg-gray-200 flex items-center justify-between p-4">
                 <div class="font-bold text-center">Large Planar Cores</div>
                 <div>
-                    <a href="https://www.fair-rite.com/" class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
+                    <a href="https://www.fair-rite.com/"
+                        class="bg-blue-500 font-semibold text-white px-8 py-2 rounded-lg">More</a>
                 </div>
             </div>
         </div>
@@ -136,9 +141,13 @@
         .puff-out-center {
             animation: puff-out-center 1s cubic-bezier(.165, .84, .44, 1.000) infinite both
         }
-
+        
         .tippy-content {
             padding: 0 !important;
+        }
+
+        .tippy-box>.tippy-arrow::before {
+            transform: scale(1.5);
         }
 
         @keyframes puff-out-center {
@@ -157,18 +166,19 @@
 
         @media all and (max-width: 767px) {
             [data-tippy-root] {
-                transform: translateY(100%) translateX(12.5px) !important;
+                transform: translateY(100%) translateX(10px) !important;
             }
+
             .tippy-box {
                 width: calc(100vw -20px) !important;
-                max-width: calc(100vw -20px) !important;
+                max-width: 100vw !important;
             }
         }
     </style>
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light-border.css" />
-    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/animations/scale-extreme.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/themes/light.css" />
+    <link rel="stylesheet" href="https://unpkg.com/tippy.js@6/dist/svg-arrow.css" />
     <script>
         tippy('[data-template]', {
             content(reference) {
@@ -177,7 +187,7 @@
                 return template.innerHTML;
             },
             allowHTML: true,
-            theme: 'light-border',
+            theme: 'light',
             //animation: 'scale-extreme',
             trigger: 'click'
         });
