--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
             .tippy-box {
                 width: calc(100vw -20px) !important;
-                max-width: 100vw !important;
+                max-width: calc(100vw -10px) !important;
             }
         }
     </style>
