--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             }
 
             .tippy-box {
-                width: calc(100vw -20px) !important;
-                max-width: 99vw !important;
+                width: 100vw !important;
+                max-width: calc(100vw -20px) !important;
             }
         }
     </style>
