--- a/index.html
+++ b/index.html
@@ -166,12 +166,11 @@
 
         @media all and (max-width: 767px) {
             [data-tippy-root] {
-                transform: translateY(100%) translateX(12.5px) !important;
+                transform: translateY(100%) translateX(15px) !important;
             }
 
             .tippy-box {
-                width: 100vw !important;
-                max-width: calc(100vw -20px) !important;
+                max-width: calc(100% - 20px) !important;
             }
         }
     </style>
