--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
             allowHTML: true,
             theme: 'light-border',
             //animation: 'scale-extreme',
-            trigger: 'click'
+            trigger: 'click',
+            interactive: true
         });
     </script>
 </body>
