--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         .detail-map-container {
             display: flex;
             position: relative;
+            flex-direction: column;
         }
 
         .detail-map-container img {
